--- a/css/style.css
+++ b/css/style.css
@@ -233,3 +233,47 @@ footer {
   background-color: var(--primary-color);
   color: #fff;
 }
+.product-details{
+  background-color: var(--light-color);
+  margin-top: 1.5rem;
+}
+.breadcrumb a{
+  color: #000000;
+  opacity: 0.9;
+  text-decoration: none;
+}
+.breadcrumb .breadcrumb-item{
+  color: #000000;
+}
+.breadcrumb-item+.breadcrumb-item::before {
+  color: #000000;
+}
+
+.gallery-wrap .img-big-wrap {
+  width: 100%;
+
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.gallery-wrap .img-big-wrap {
+  text-align: center;
+}
+.gallery-wrap .img-big-wrap img {
+  max-width: 100%;
+ 
+}
+.gallery-wrap .thumbs-wrap a {
+  width: 60px;
+  height: 60px;
+  border: 1px solid #dee2e6;
+  border-radius: 0.4rem;
+  margin: 3px;
+  display: inline-block;
+  overflow: hidden;
+}
+.gallery-wrap .thumbs-wrap img {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: zoom-in;
+}
